--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'MyCustomFont';  /* 您可以选择任何您喜欢的字体名称 */
-    src: url('font/YingbiKaiti.ttf') format('truetype');  /* 指向 TTF 文件的路径 */
+    src: url('font/HYSongYunLangHeiW-1.ttf') format('truetype');  /* 指向 TTF 文件的路径 */
 }
 
 body {
